--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   curved_navigation_bar:
   shared_preferences: ^2.5.3
+  http: 
+  hive: 
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
