--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: 
   hive_flutter: ^1.1.0
   dropdown_button2:
+  telpo_flutter_sdk: ^0.1.1
 
 dev_dependencies:
   flutter_test:
